# spark

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
engine/: Cargo.toml  build.rs
engine/shaders/: Common.glsl  CopyTexture.frag  FullscreenPass.vert  GlobalBindings.glsl  GraphBindings.glsl  GraphicsBindings.glsl  Green.comp  ImguiTriangle.frag  ImguiTriangle.vert  Red.comp  Yellow.comp
engine/spv/: CopyTexture.frag.spv  FullscreenPass.vert.spv  Green.comp.spv  ImguiTriangle.frag.spv  ImguiTriangle.vert.spv  Red.comp.spv  Yellow.comp.spv
engine/src/: audio_device.rs  engine.rs  input_state.rs  lib.rs  render_graph.rs  render_util.rs  renderer.rs  scene.rs  tools.rs
example/: example.comp  example.json
res/data/: demo.json
res/spv/: Green.comp.spv
vkutil/: Cargo.toml
vkutil/src/: lib.rs  vk_msg_callback.rs
