[package]
name = "spark"
version = "0.1.0"
authors = ["Gregory Mitrano <gregory.mitrano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash                 = "0.32"
ash-window          = "0.6"
imgui               = "0.7"
imgui-winit-support = "0.7"
vk-mem              = "0.2"
winit               = "0.24"
vkutil              = { path = "../vkutil" }
align-data          = "0.1"