[package]
name = "spark"
version = "0.1.0"
authors = ["Gregory Mitrano <gregory.mitrano@gmail.com>"]
edition = "2018"
default-run = "editor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash                 = "0.32"
ash-window          = "0.6"
imgui               = "0.7"
imgui-winit-support = "0.7"
vk-mem              = "0.2"
winit               = "0.24"
vkutil              = { path = "../vkutil" }
align-data          = "0.1"
bass-sys            = { git = "https://github.com/impakt73/bass-sys.git", branch = "main" }
ultraviolet         = { version = "0.7", features = [ "int" ] }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"