[package]
name = "spark"
version = "0.1.0"
authors = ["Gregory Mitrano <gregory.mitrano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash                 = "0.32"
ash-window          = "0.6"
imgui               = "0.7"
imgui-winit-support = "0.7"
vk-mem              = "0.2"
winit               = "0.24"
vkutil              = { path = "../vkutil" }
align-data          = "0.1"
bass-sys            = { git = "https://github.com/impakt73/bass-sys.git", branch = "main" }
ultraviolet         = { version = "0.7", features = [ "int" ] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tinyfiledialogs     = "3"
shaderc             = { version = "0.7", optional = true }
quick-error         = "2"
bytemuck            = "1.7"
glam                = { version = "0.16", features = ["bytemuck"] }
tracing             = "0.1"
tracing-subscriber  = "0.2"

[features]
tools = ["shaderc"]
